--- a/2.webpack-basic-usage/2.1-config-base.md
+++ b/2.webpack-basic-usage/2.1-config-base.md
@@ -1,2 +1,140 @@
 # 2.1 定义基础配置
 
+基出配置如下：
+
+```
+const path = require("path");
+
+module.exports = {
+  entry: {
+    index: "./src/index.js"
+  },
+  output: {
+    publicPath: "/",
+    path: path.join(__dirname, "build"),
+    filename: "[name].[contenthash:8].js"
+  }
+}
+```
+
+上例中定义了一个基础的 wenpack 配置，其中 publicPath 和 contenthash 是前述没有讲到的内容，他们表示什么意义呢？
+
+### publicPath
+
+publicPath 为项目中的所有资源指定一个基础路径，称为公共路径。
+
+```
+静态资源最终访问路径 = output.publicPath + 资源loader或插件等配置路径
+```
+
+例如:
+
+```
+output.publicPath = '/static/';//最后一个斜杠可省略
+
+// image
+options: {
+  name: 'img/[name].[ext]?[hash]'
+}
+// 最终图片的访问路径为
+output.publicPath + 'img/[name].[ext]?[hash]' = '/static/img/[name].[ext]?[hash]'
+
+// js output.filename
+output: {
+  filename: '[name].js'
+}
+// 最终js的访问路径为
+// http://localhost:8080/static/index.js
+output.publicPath + '[name].js' = '/static/[name].js'
+```
+
+publicPath 的默认值为'/'。
+
+### hash 相关概念
+
+- chunk
+
+  正常情况下，以 entry 指定的文件为入口，将入口文件及其依赖打包成一个 bundle 文件(也可以认为是一个 chunk)，然而有些情况下，部分功能是在使用时才会用到，出于性能优化的需要，我们将按需加载的内容打包到独立的文件当中，这些文件就叫做 chunk。大概有三种方式产生 chunk:
+  1）entry 入口
+  不同的入口产生不同的 chunk(entry 传一个数组也产生一个 chunk)
+
+  ```
+  module.exports = {
+    entry: {
+      index: "./src/index.js",
+      search: "./src/search.js"
+    },
+    output: {
+      path: path.join(__dirname, "build"),
+      filename: "[name].js"
+    }
+  }
+  ```
+
+  两个入口生成两个 chunk。
+
+  2）异步加载模块
+
+  ```
+  module.exports = {
+    entry: {
+      index: "./src/index.js"
+    },
+    output: {
+      path: path.join(__dirname, "build"),
+      filename: "[name].js"
+      chunkFilename: "[name].js"
+    }
+  }
+  const model = r => require.ensure([], () => r(require('./Math.js')), 'model')
+  ```
+
+  通过 require.ensure 异步加载模块生成 chunk。
+
+  3）代码分割(code spliting)
+
+  通过 splitChunks 来进行代码分割。
+
+  ```
+  module.exports = {
+    entry: {
+      index: "src/index.js"
+    },
+    output: {
+      path: path.join(__dirname, "build"),
+      filename: "[name].js",
+      chunkFilename: '[name].js',
+    },
+    optimization: {
+      runtimeChunk: "single",
+      splitChunks: {
+        cacheGroups: {
+          commons: {
+            minSize: 0
+          },
+          vendor: {
+            test: /node_modules/,
+            name: "vendor",
+          }
+        },
+      }
+    }
+  }
+
+  ```
+
+  runtimeChunk: "single"会为 runtime(webpack 用来加载和解析模块的代码)代码单独生成一个 chunk，common 和 vendor 会分别生成一个 chunk。
+
+- hash
+
+  由编译的所有文件决定的 hash 指纹，只要编译的项目文件有变化这个 hash 值就会有变化，所有的 chunk 文件使用相同的 hash 值。
+
+- chunkhash
+
+  由 chunk 文件块决定的 hash 指纹，不同的入口会生成不同的 chunk，对应着不同的 hash 值。通常，我们在生产环境中把一些公共库和程序入口文件分开，单独打包构建，如果不更改公共库，hash 值就不会改变，也就达到了缓存的目的。如果主项目采用 chunkhash，项目主入口文件 main.js 及其对应的依赖文件由于被打包在同一个模块，所以共用相同的 chunkhash，这就存在一个问题，只要 css 或 js 改变了，其对应的 chunkhash 就改变了，浏览器就会重新下载 css 和 js，没有达到缓存的目的。
+
+- contenthash
+
+  由文件内容决定的 hash 指纹，假如 css 改变了，js 的 contenthash 并不会改变，由此可以缓存 js，同样，当 js 改变时，css 的 contenthash 并不会改变，css 得以缓存。因此用 contenthash 能够更好的缓存。
+
+之所以需要 hash 是因为浏览器的缓存策略，通常一个 html 引用的 js 名称(以及请求参数)不变，浏览器就不会重新请求。相反地，如果我们的 js 改变了，如果还是之前的名字，就会导致浏览器一直使用缓存中的 js，如果有 hash，新的内容产生新的 hash 值，浏览器就会请求新的 js。
