--- a/1.acquaintance-webpack.md
+++ b/1.acquaintance-webpack.md
@@ -1,4 +1,4 @@
-# 1. 初识webpack
+# 1. 初识 webpack
 
 为什么需要构建工具？试想一下，假如没有构建工具，我们平常用到的打包、转换、压缩等一些列处理都难以实现，所以我们需要构建工具。webpack 就是一个功能强大的构建工具，通过 webpack 的配置文件，我们更能方便地定制构建流程。webpack 默认配置文件为 webpack.config.js，也可以通过 webpack --config 指定配置文件，当没有指定配置文件时会到根目录查找 webpack.config.js 文件。
 
@@ -23,9 +23,9 @@ module.exports = {
 
 ## 基本概念
 
-* entry
+- entry
 
-  webpack 打包的入口文件，表示打包从哪个文件开始来构建内部依赖图，默认值是 `./src/index.js`，也可以通过 entry 来指定，事实上 webpack 支持多种方式定义 entry 属性:
+  webpack 打包的入口文件，表示打包从哪个文件开始来构建内部依赖图(非代码如图片、文件也会加入)，默认值是 `./src/index.js`，也可以通过 entry 来指定，事实上 webpack 支持多种方式定义 entry 属性:
 
   **1）单个入口语法**
 
@@ -83,7 +83,7 @@ module.exports = {
 
   > 使用 optimization.splitChunks 为页面间共享的应用程序代码创建 bundle。由于入口起点增多，多页应用能够复用入口起点之间的大量代码/模块，从而可以极大地从这些技术中受益。
 
-* output
+- output
 
   output 指定输出的 bundle 文件放到哪里，以及如何命名这些文件。主要输出文件的默认值是 `./dist/main.js`，其他生成文件默认放置在 `./dist` 文件目录中。
 
@@ -118,7 +118,7 @@ module.exports = {
 
   开发环境下并不会在本地生成文件，而是存储在内存中。
 
-* loader
+- loader
 
   由于 webpack 原生只支持 js 和 JSON 两种类型的文件，因此需要对其他类型的文件进行转换，进行转换的工具就是 loader，loader 可以链式调用，从右到左的顺序调用，前一个 loader 的返回结果会传递给下一个 loader。 在 webpack 的配置中 loader 有两个属性：
 
@@ -139,7 +139,7 @@ module.exports = {
 
   以上配置对一个 module 对象定义了 rules 属性，里面必须包含 test 和 use 属性，它告诉 webpack 编译器当遇到.css 结尾的文件先用 css-loader 处理一下，得到的结果再用 style-loader 进行处理。
 
-* plugin
+- plugin
 
   loader 用于转换某些类型的模块，而插件则可以用于执行范围更广的任务。包括：打包优化，资源管理，注入环境变量。 想要使用一个插件，你只需要 require\(\) 它，然后把它添加到 plugins 数组中。多数插件可以通过选项\(option\)自定义。你也可以在一个配置文件中因为不同目的而多次使用同一个插件，这时需要通过使用 new 操作符来创建它的一个实例。
 
@@ -161,7 +161,7 @@ module.exports = {
 
   在上面的示例中，通过插件 html-webpack-plugin 为应用程序生成 一个 HTML 文件，并自动注入所有生成的 bundle。
 
-* mode
+- mode
 
   mode 为 webpack 提供的模式参数，不同的模式 webpack 会开启不同的处理方法，包括三个参数：development, production 或 none。
 
@@ -171,7 +171,7 @@ module.exports = {
   };
   ```
 
-* browser compatibility
+- browser compatibility
 
   浏览器兼容性，webpack 支持所有符合 ES5 标准 的浏览器（不支持 IE8 及以下版本）。webpack 的 import\(\) 和 require.ensure\(\) 需要 Promise。如果你想要支持旧版本浏览器，在使用这些表达式之前，还需要提前加载 polyfill。
 
@@ -185,4 +185,3 @@ module.exports = {
   output: './dist/main.js', // 指定默认的 output 为: ./dist/main.js
 };
 ```
-
