--- a/1.acquaintance-webpack.md
+++ b/1.acquaintance-webpack.md
@@ -122,7 +122,8 @@ module.exports = {
 
   由于 webpack 原生只支持 js 和 JSON 两种类型的文件，因此需要对其他类型的文件进行转换，进行转换的工具就是 loader，loader 可以链式调用，从右到左的顺序调用，前一个 loader 的返回结果会传递给下一个 loader。 在 webpack 的配置中 loader 有两个属性：
 
-  1）test 属性，用于标识出应该被对应的 loader 进行转换的某个或某些文件。 2）use 属性，表示进行转换时，应该使用哪个 loader。
+  1）test 属性，用于标识出应该被对应的 loader 进行转换的某个或某些文件，如果不传则匹配所有文件。
+  2）use 属性，表示进行转换时，应该使用哪个 loader。
 
   ```text
   module.exports = {
