--- a/2.webpack-basic-usage/2.6-handle-file.md
+++ b/2.webpack-basic-usage/2.6-handle-file.md
@@ -1,2 +1,210 @@
-# 2.6处理文件
+# 2.6 处理文件
 
+处理文件一般可以用三种 loader：
+
+- raw-loader
+  raw-loader 比较简单，基本就是直接返回 JSON.stringify 后的内容。
+
+  ```
+  //raw-loader
+  module.exports = function(content) {
+    ...
+    return "module.exports = " + JSON.stringify(content);
+  }
+  ```
+
+  比如我们要引入一个\.webapp 结尾的文件：
+
+  ```
+  //manifest.webapp
+  {
+    "name": "Webpack",
+    "slug": "webpack",
+    "icon": "icon.svg",
+  }
+  //app.js
+  import manifest from './manifest.webapp';
+
+  console.log('manifest', manifest);
+  ```
+
+  可以用 raw-loader 处理，配置如下：
+
+  ```
+  module.exports = {
+    module: {
+      rules: [
+        {
+            test: /\.webapp$/,
+            use: ["raw-loader"]
+        }
+      ]
+    }
+  }
+  ```
+
+  结果如下：
+
+  manifest 被转换成了 stringify 后的内容。
+
+  ```
+  console.log('manifest', manifest);
+  => '{\n  "name": "Webpack",\n  "slug": "webpack",\n  "icon": "icon.svg",\n}'
+  ```
+
+- file-loader
+  主要有两个作用，一个是转换 import/require()引入的文件为 url，另一个就是将文件输出到相应目录。
+
+  ```
+  module.exports = function(content) {
+    ...
+
+    if (query.emitFile === undefined || query.emitFile) {
+        this.emitFile(outputPath, content);
+    }
+
+    return "module.exports = " + publicPath + ";";
+  }
+  ```
+
+  比如我们引用的字体文件：
+
+  ```
+  @font-face {
+    src: url("./xhm.ttf");
+    font-family: "XHM_TTF";
+  }
+
+  div {
+    color: red;
+    font-family: "XHM_TTF";
+  }
+  ```
+
+  通过 file-loader 进行处理：
+
+  ```
+  module.exports = {
+    module: {
+      rules: [
+        {
+          test: /\.(woff|woff2|eot|ttf|otf)$/,
+          use: [
+            {
+                loader: require.resolve('file-loader'),
+                options: {
+                    name: '[name]_[hash:8].[ext]',
+                    outputPath: "assets"//默认为根目录
+                }
+            }
+          ]
+        }
+      ]
+    }
+  }
+  ```
+
+  在根目录生成了如下文件：
+
+  ```
+  assets
+     - xhm_902fbdd2.ttf
+  ```
+
+  css 引入字体的 url 变成了：
+
+  ```
+  @font-face {
+    src: url(/assets/xhm_902fbdd2.ttf);
+    font-family: "XHM_TTF";
+  }
+  ```
+
+- url-loader
+
+  url-loader 实际上是对 file-loader 的封装，增加了将小文件转换为 base64 data URL 的功能，这个小文件是通过给 url-loader 传入的 limit 参数来确定的。通常我们引入的一些图片较小，就没必要在输出目录生成文件，而增加 http 请求的开销。
+
+  ```
+  //url-loader
+  module.exports = function(content) {
+  ...
+
+  if(!limit || content.length < limit) {
+    if(typeof content === "string") {
+      content = new Buffer(content);
+    }
+
+    return "module.exports = " + JSON.stringify("data:" + (mimetype ? mimetype + ";" : "") + "base64," + content.toString("base64"));
+  }
+
+   var fileLoader = require("file-loader");
+
+   return fileLoader.call(this, content);
+  }
+  ```
+
+  用 url-loader 来处理图片：
+
+  ```
+  module.exports = {
+    module: {
+      rules: [
+        {
+            test: /\.(png|svg|jpg|gif)$/,
+            use: [
+                { loader: "url-loader", options: { limit: 10240 } } // 小于10240字节转换为base64
+            ]
+        }
+      ]
+    }
+  }
+
+  ```
+
+  小于 10240 字节的图片被转换成了 base64：
+
+  ```
+   "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgA"
+  ```
+
+  大于 10240 字节的图片被转换成了 url 并在输出目录生成了文件：
+
+  ```
+  "b6298660aab836ddda6a1639e6a8d01a.png"
+  ```
+
+有时我们需要一个保底的 loader 来处理文件，如果匹配到可以用的 loader 就用该 loader，如果没有就用这个保底的 loader，如下可以通过 oneOf 来实现：
+
+oneOf 表示对该资源只应用第一个匹配的规则。
+
+```
+  module.exports = {
+    module: {
+      rules: [
+        {
+          oneOf: [
+            {
+                test: /\.(png|svg|jpg|gif)$/,
+                use: [
+                    { loader: "url-loader", options: { limit: 10240 } } // 小于10240字节转换为base64
+                ]
+            },
+            {
+                test: /\.webapp$/,
+                use: ["raw-loader"]
+            },
+              {
+              loader: 'file-loader',//没有test，处理所有类型的文件
+              options: {
+                name: '[name].[hash:8].[ext]',
+              },
+            },
+         ]
+        }
+      ]
+    }
+  }
+
+```
+
+上例的规则表示，如果 url-loader 和 raw-loader 要处理的文件类型都不匹配，就用 file-loader 进行处理。
