--- a/2.webpack-basic-usage/2.3-handle-css.md
+++ b/2.webpack-basic-usage/2.3-handle-css.md
@@ -1,4 +1,4 @@
-# 2.3 处理css
+# 2.3 处理 css
 
 因为 webpack 原生只支持 js 和 json，因此需要对 css 进行处理，首先需要用 [css-loader](https://github.com/webpack-contrib/css-loader) 对 css 进行解析转换，比如处理@import 或 url\(\)等语法。
 
@@ -30,7 +30,16 @@ module.exports = {
     rules: [
       {
         test: /\.css$/,
-        use: ["style-loader", "css-loader"],
+        use: [
+          {
+            loader: "style-loader",
+            options: {
+              insertAt: 'top',// 将样式插入到<head>,
+              singleton: true,//将所有的style标签合并成一个
+            }
+          },
+          "css-loader"
+        ],
         sideEffects: true
       }
     ]
@@ -65,4 +74,3 @@ module.exports = {
 ```
 
 上例中首先将 MiniCssExtractPlugin.loader 加入到 css-loader 前\(loader 从右向左执行\)，且必须将实例化的 MiniCssExtractPlugin 插件加入到 plugins 数组内，最后我们就能看到在本地生成的 css 文件了。
-
