--- a/2.webpack-basic-usage/2.5-support-es6.md
+++ b/2.webpack-basic-usage/2.5-support-es6.md
@@ -5,7 +5,7 @@
 - 添加依赖
 
   ```
-  yarn add @babel/core @babel/preset-env @babel/preset-react babel-loader -D
+  yarn add @babel/core @babel/preset-env @babel/preset-react babel-loader babel-plugin-module-resolver -D
   ```
 
 - webpack 配置
@@ -52,7 +52,15 @@
             }
         }
         ],
-        "@babel/preset-react"
+        "@babel/preset-react",
+    ],
+    "plugins": [
+      [
+        "module-resolver",
+        {
+          "root": ["./src"] //设置根目录后，引用组件时前面就不用加src了(ts需要单独配置)，也不用很长的相对路径
+        }
+      ]
     ]
    }
   ```
