--- a/2.webpack-basic-usage/2.6-handle-file.md
+++ b/2.webpack-basic-usage/2.6-handle-file.md
@@ -2,7 +2,9 @@
 
 处理文件一般可以用三种 loader：
 
-* raw-loader raw-loader 比较简单，基本就是直接返回 JSON.stringify 后的内容。
+- raw-loader
+
+  raw-loader 比较简单，基本就是直接返回 JSON.stringify 后的内容。
 
   ```text
   //raw-loader
@@ -51,7 +53,9 @@
   => '{\n  "name": "Webpack",\n  "slug": "webpack",\n  "icon": "icon.svg",\n}'
   ```
 
-* file-loader 主要有两个作用，一个是转换 import/require\(\)引入的文件为 url，另一个就是将文件输出到相应目录。
+- file-loader
+
+  主要有两个作用，一个是转换 import/require\(\)引入的文件为 url，另一个就是将文件输出到相应目录。
 
   ```text
   module.exports = function(content) {
@@ -118,7 +122,7 @@
   }
   ```
 
-* url-loader
+- url-loader
 
   url-loader 实际上是对 file-loader 的封装，增加了将小文件转换为 base64 data URL 的功能，这个小文件是通过给 url-loader 传入的 limit 参数来确定的。通常我们引入的一些图片较小，就没必要在输出目录生成文件，而增加 http 请求的开销。
 
@@ -204,4 +208,3 @@ oneOf 表示对该资源只应用第一个匹配的规则。
 ```
 
 上例的规则表示，如果 url-loader 和 raw-loader 要处理的文件类型都不匹配，就用 file-loader 进行处理。
-
