--- a/2.webpack-basic-usage/2.7-support-ts.md
+++ b/2.webpack-basic-usage/2.7-support-ts.md
@@ -1,2 +1,198 @@
-# 2.7 支持ts
+# 2.7 支持 ts
 
+- 安装依赖
+
+  ```
+  yarn add typescript eslint-config-airbnb-typescript @typescript-eslint/parser @typescript-eslint/eslint-plugin @babel/preset-typescript react-dev-utils  -D
+  ```
+
+- webpack 配置
+
+  通过插件[ForkTsCheckerWebpackPlugin](https://github.com/TypeStrong/fork-ts-checker-webpack-plugin)开启一个新的线程来对 typescript 作类型检查。
+
+  ```
+  const resolve = require("resolve");
+  const typescriptFormatter = require("react-dev-utils/typescriptFormatter");
+  const ForkTsCheckerWebpackPlugin = require("react-dev-utils/ForkTsCheckerWebpackPlugin");//内部引用fork-ts-checker-webpack-plugin
+
+  module.exports = {
+     plugins: [
+        new ForkTsCheckerWebpackPlugin({
+            typescript: resolve.sync("typescript", {
+                basedir: path.join(__dirname, "node_modules")
+            }),
+            async: false,
+            useTypescriptIncrementalApi: true,
+            checkSyntacticErrors: true,
+            resolveModuleNameModule: process.versions.pnp
+                ? `${__dirname}/pnpTs.js`
+                : undefined,
+            resolveTypeReferenceDirectiveModule: process.versions.pnp
+                ? `${__dirname}/pnpTs.js`
+                : undefined,
+            tsconfig: path.join(__dirname, "tsconfig.json"),//配置文件路径
+            reportFiles: [
+                "**",
+                "!**/__tests__/**",
+                "!**/?(*.)(spec|test).*",
+                "!**/src/setupProxy.*",
+                "!**/src/setupTests.*"
+            ],
+            silent: true,
+            // The formatter is invoked directly in WebpackDevServerUtils during development
+            formatter: isEnvProduction ? typescriptFormatter : undefined
+        })
+     ]
+  }
+
+  ```
+
+- eslint 配置
+
+  替换 eslint 配置的 extends 和 parser:
+
+  ```
+  //.eslintrc
+  {
+    "extends": ["airbnb-typescript"],
+    "parser": "@typescript-eslint/parser"
+  }
+  ```
+
+- babel 配置
+
+  添加@babel/preset-typescript 到 presets:
+
+  ```
+  //babel.config.json
+  {
+    "presets": [
+        [
+        "@babel/preset-env",
+        {
+            "useBuiltIns": false,
+            "targets": {
+            "chrome": 68
+            }
+        }
+        ],
+        "@babel/preset-react",
+        "@babel/preset-typescript"
+    ]
+  }
+  ```
+
+- ts 配置
+
+  ```
+  //tsconfig.json
+  {
+    "compilerOptions": {
+        "target": "es5",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "preserve",
+        "strictNullChecks": true,
+        "baseUrl": "",
+        "paths": {
+          "components/*": ["src/components/*"] //引用components时不必在前面加上src
+        }
+    },
+    "include": ["src", "env.d.ts"],
+  }
+
+  ```
+
+- ts 接口文件配置
+
+  如果想要引用 svg 等文件，需要添加如下的接口配置文件
+
+  ```
+  // env.d.ts，在tsconfig.json中通过include引入
+  // / <reference types="node" />
+  // / <reference types="react" />
+  // / <reference types="react-dom" />
+
+  declare namespace NodeJS {
+    interface ProcessEnv {
+        NODE_ENV: 'development' | 'production' | 'test';
+        PUBLIC_URL: string;
+    }
+  }
+
+  declare namespace NodeJS {
+    interface Global {
+        fetch: any;
+    }
+  }
+
+  declare module '*.bmp' {
+      const src: string;
+      export default src;
+  }
+
+  declare module '*.gif' {
+      const src: string;
+      export default src;
+  }
+
+  declare module '*.jpg' {
+      const src: string;
+      export default src;
+  }
+
+  declare module '*.jpeg' {
+    const src: string;
+    export default src;
+  }
+
+  declare module '*.png' {
+    const src: string;
+    export default src;
+  }
+
+  declare module '*.webp' {
+    const src: string;
+    export default src;
+  }
+
+  declare module '*.webapp' {
+    const src: any;
+    export default src;
+  }
+
+  declare module '*.svg' {
+    import * as React from 'react';
+
+    export const ReactComponent: React.SFC<React.SVGProps<SVGSVGElement>>;
+
+    const src: string;
+    export default src;
+  }
+
+  declare module '*.module.css' {
+    const classes: { [key: string]: string };
+    export default classes;
+  }
+
+  declare module '*.module.scss' {
+    const classes: { [key: string]: string };
+    export default classes;
+  }
+
+  declare module '*.module.sass' {
+    const classes: { [key: string]: string };
+    export default classes;
+  }
+
+  ```
